tailwind config and installs

--- a/package.json
+++ b/package.json
@@ -16,26 +16,42 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@faker-js/faker": "^7.5.0",
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
-    "sequelize": "^6.21.4"
+    "sequelize": "^6.21.6",
+    "stripe": "^10.8.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
+    "@babel/core": "^7.19.0",
     "@babel/preset-react": "^7.18.6",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
+    "chai": "^4.3.6",
+    "css-loader": "^6.7.1",
+    "dotenv-webpack": "^8.0.1",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
+    "style-loader": "^3.3.1",
+    "supertest": "^6.2.4",
+    "tailwindcss": "^3.1.8",
+    "uuid": "^9.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
