--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "tailwindcss": "^3.1.8",
     "uuid": "^9.0.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   }
 }
