--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
+    "react-icons": "^4.4.0",
     "sequelize": "^6.21.6",
     "stripe": "^10.8.0"
   },
