added google oauth

--- a/package.json
+++ b/package.json
@@ -17,20 +17,24 @@
   "license": "MIT",
   "dependencies": {
     "@faker-js/faker": "^7.5.0",
+    "@react-oauth/google": "^0.2.6",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "gapi-script": "^1.2.0",
+    "google-auth-library": "^8.5.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
+    "react-google-login": "^5.2.2",
     "sequelize": "^6.21.6",
     "stripe": "^10.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
     "@babel/preset-react": "^7.18.6",
-    "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "chai": "^4.3.6",
     "css-loader": "^6.7.1",
