--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "@faker-js/faker": "^7.5.0",
     "bcrypt": "^5.0.1",
+    "convert-csv-to-json": "^1.3.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "glob": "^8.0.3",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.0",
     "@babel/preset-react": "^7.18.6",
+    "@react-google-maps/api": "^2.12.2",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "chai": "^4.3.6",
