--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start:dev": "NODE_ENV=development npm run build:dev & npm run start-server",
     "start:dev:logger": "LOGGING=true npm run start:dev",
     "start:dev:seed": "SEED=true npm run start:dev",
+    "start:dev:austin": "DATABASE_URL=postgres://postgres:12345@localhost:5432/food_app npm run start:dev",
+    "start:dev:seed:austin": "DATABASE_URL=postgres://postgres:12345@localhost:5432/food_app npm run start:dev:seed",
     "start-server": "JWT=shh nodemon server -e html,js,scss --ignore public --ignore client"
   },
   "author": "Fullstack Academy of Code",
