--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
+    "react-slider": "^2.0.4",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
