--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chai": "^4.3.6",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^8.0.1",
+    "file-loader": "^6.2.0",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
     "postcss": "^8.4.16",
