--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "pg": "^8.8.0",
     "react-icons": "^4.4.0",
     "sequelize": "^6.21.6",
-    "stripe": "^10.8.0"
+    "stripe": "^10.8.0",
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
