--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@faker-js/faker": "^7.5.0",
-    "@mui/material": "^5.10.5",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "convert-csv-to-json": "^1.3.3",
@@ -34,7 +35,8 @@
     "pg": "^8.8.0",
     "react-icons": "^4.4.0",
     "sequelize": "^6.21.6",
-    "stripe": "^10.8.0"
+    "stripe": "^10.8.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
