--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "react-icons": "^4.4.0",
     "sequelize": "^6.21.6",
     "stripe": "^10.8.0",
+    "styled-components": "^5.3.5",
     "use-places-autocomplete": "^4.0.0",
-    "styled-components": "^5.3.5"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
@@ -65,7 +66,6 @@
     "style-loader": "^3.3.1",
     "supertest": "^6.2.4",
     "tailwindcss": "^3.1.8",
-    "uuid": "^9.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0"
