--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "react-icons": "^4.4.0",
+    "reselect": "^4.1.6",
     "sequelize": "^6.21.6",
     "stripe": "^10.8.0",
-    "use-places-autocomplete": "^4.0.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
