--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@faker-js/faker": "^7.5.0",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.36.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "convert-csv-to-json": "^1.3.3",
@@ -35,7 +37,7 @@
     "pg": "^8.8.0",
     "react-icons": "^4.4.0",
     "sequelize": "^6.21.6",
-    "stripe": "^10.8.0",
+    "stripe": "^10.10.0",
     "styled-components": "^5.3.5",
     "use-places-autocomplete": "^4.0.0",
     "uuid": "^9.0.0"
