--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "react-icons": "^4.4.0",
+    "react-router-hash-link": "^2.4.3",
     "reselect": "^4.1.6",
     "sequelize": "^6.21.6",
     "stripe": "^10.10.0",
