--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 YELP_API_KEY = ''
 YELP_CLIENT_ID = ''
-GOOGLE_API_KEY = 'AIzaSyCRHfs9FY_185mt6v0uB6zCZvVrqhWqYyk'
+GOOGLE_API_KEY = ''
 process.env.GOOGLE_AUTH_CLIENT_ID =
-  "1015928772150-6kimvcn2ih8i6qqjf6n8i3ots1e7n8b1.apps.googleusercontent.com";
-process.env.GOOGLE_AUTH_CLIENT_SECRET = "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";
+  "";
+process.env.GOOGLE_AUTH_CLIENT_SECRET = "";
 
